done: navbar and input area of chatpage

--- a/知识点总结.md
+++ b/知识点总结.md
@@ -3,6 +3,8 @@
 
 # css
 - flex布局
+- 内部元素居中
+  - https://www.cnblogs.com/One-sprite/p/7009403.html
 - vh与百分比的区别
 - 实现三角形
 - 隐藏滚动条
@@ -14,4 +16,5 @@
   - https://zhuanlan.zhihu.com/p/89906315
 
 # 其他
+- 如何构建合适的项目目录？
 - VSCode怎么自定义设置主题和代码颜色：https://www.php.cn/tool/vscode/485739.html
